--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1088,6 +1088,20 @@ select {
 .prose > :last-child {
 	margin-bottom: 0;
 }
+.sr-only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border-width: 0;
+}
+.static {
+	position: static;
+}
 .fixed {
 	position: fixed;
 }
@@ -1118,9 +1132,6 @@ select {
 .z-50 {
 	z-index: 50;
 }
-.order-2 {
-	order: 2;
-}
 .order-3 {
 	order: 3;
 }
@@ -1133,13 +1144,31 @@ select {
 .col-auto {
 	grid-column: auto;
 }
+.float-right {
+	float: right;
+}
+.m-auto {
+	margin: auto;
+}
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
 }
+.my-4 {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
+.my-3 {
+	margin-top: 0.75rem;
+	margin-bottom: 0.75rem;
+}
 .my-0 {
 	margin-top: 0px;
 	margin-bottom: 0px;
+}
+.my-1 {
+	margin-top: 0.25rem;
+	margin-bottom: 0.25rem;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -1210,23 +1239,14 @@ select {
 .mb-4 {
 	margin-bottom: 1rem;
 }
-.mb-5 {
-	margin-bottom: 1.25rem;
-}
 .mb-3 {
 	margin-bottom: 0.75rem;
 }
-.-mt-px {
-	margin-top: -1px;
-}
-.mr-4 {
-	margin-right: 1rem;
+.mb-2 {
+	margin-bottom: 0.5rem;
 }
 .ml-auto {
 	margin-left: auto;
-}
-.mb-2 {
-	margin-bottom: 0.5rem;
 }
 .mb-0 {
 	margin-bottom: 0px;
@@ -1234,8 +1254,20 @@ select {
 .mb-1 {
 	margin-bottom: 0.25rem;
 }
+.-mt-px {
+	margin-top: -1px;
+}
 .mr-1 {
 	margin-right: 0.25rem;
+}
+.mb-5 {
+	margin-bottom: 1.25rem;
+}
+.mr-5 {
+	margin-right: 1.25rem;
+}
+.mr-4 {
+	margin-right: 1rem;
 }
 .block {
 	display: block;
@@ -1348,6 +1380,9 @@ select {
 .flex-shrink-0 {
 	flex-shrink: 0;
 }
+.border-collapse {
+	border-collapse: collapse;
+}
 .origin-top-left {
 	transform-origin: top left;
 }
@@ -1452,6 +1487,9 @@ select {
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
+.break-all {
+	word-break: break-all;
+}
 .rounded-md {
 	border-radius: 0.375rem;
 }
@@ -1486,6 +1524,9 @@ select {
 .border-2 {
 	border-width: 2px;
 }
+.border-0 {
+	border-width: 0px;
+}
 .border-b-2 {
 	border-bottom-width: 2px;
 }
@@ -1500,6 +1541,9 @@ select {
 }
 .border-r {
 	border-right-width: 1px;
+}
+.border-none {
+	border-style: none;
 }
 .border-gray-300 {
 	--tw-border-opacity: 1;
@@ -1540,6 +1584,10 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(185, 28, 28, var(--tw-bg-opacity));
 }
+.bg-gray-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
+}
 .bg-indigo-600 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
@@ -1559,10 +1607,6 @@ select {
 .bg-gray-50 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
-}
-.bg-gray-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
 }
 .bg-indigo-50 {
 	--tw-bg-opacity: 1;
@@ -1588,14 +1632,17 @@ select {
 .p-6 {
 	padding: 1.5rem;
 }
+.p-0 {
+	padding: 0px;
+}
 .p-3 {
 	padding: 0.75rem;
 }
 .p-4 {
 	padding: 1rem;
 }
-.p-0 {
-	padding: 0px;
+.p-5 {
+	padding: 1.25rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -1653,14 +1700,6 @@ select {
 	padding-top: 2.5rem;
 	padding-bottom: 2.5rem;
 }
-.px-5 {
-	padding-left: 1.25rem;
-	padding-right: 1.25rem;
-}
-.py-0 {
-	padding-top: 0px;
-	padding-bottom: 0px;
-}
 .pt-6 {
 	padding-top: 1.5rem;
 }
@@ -1691,14 +1730,23 @@ select {
 .pb-1 {
 	padding-bottom: 0.25rem;
 }
-.pl-4 {
-	padding-left: 1rem;
-}
 .pt-8 {
 	padding-top: 2rem;
 }
-.pl-2 {
-	padding-left: 0.5rem;
+.pl-4 {
+	padding-left: 1rem;
+}
+.pb-2 {
+	padding-bottom: 0.5rem;
+}
+.pb-0 {
+	padding-bottom: 0px;
+}
+.pr-2 {
+	padding-right: 0.5rem;
+}
+.pr-3 {
+	padding-right: 0.75rem;
 }
 .text-left {
 	text-align: left;
@@ -1874,6 +1922,10 @@ select {
 }
 .shadow-xl {
 	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-none {
+	--tw-shadow: 0 0 #0000;
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .ring-1 {
