--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,3 +8,16 @@
     height:100%;
     object-fit: contain;
 }
+.photo-preview{
+    width:90px;
+    height:90px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    object-fit: cover;
+    border: 1px dashed #ccc;
+}
+.photo-preview img{
+    width:100%;
+    height:100%;
+}
